refactor(config): update automations and template configurations
Removed unused automations and consolidated template logic for occupancy and environmental sensors across multiple areas. Simplified .gitignore entries for ESPHome configuration files, streamlined HTTP proxy settings, and removed outdated template usage. These changes aim to enhance the maintainability and performance of the configuration by eliminating redundancy and improving clarity.

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,6 @@ node-red/*
 !node-red/settings.js
 all_entities.csv
 ha-code.md
+esphome/esp32-bluetooth-proxy-c94edc.yaml
+esphome/esp32-bluetooth-proxy-fd5bc4.yaml
+esphome/raspiaudio-muse-luxe-6b49cc.yaml
