--- a/configuration.yaml
+++ b/configuration.yaml
@@ -3,10 +3,19 @@ history:
 wake_on_lan:
 webhook:
 my:
+api:
 
-# o365:
-#   client_secret: !secret o365_personal_secret
-#   client_id: !secret o365_personal_client_id
+http:
+  use_x_forwarded_for: true
+  trusted_proxies:
+    - 192.168.1.0/24
+    - 192.168.100.0/24
+    - 192.168.200.0/24
+    - 192.168.50.0/24
+    - 172.30.33.0/24
+    - 172.30.33.3
+    - 127.0.0.1
+    - ::1
 
 homeassistant:
   packages: !include_dir_merge_named configuration/
@@ -16,8 +25,3 @@ homeassistant:
 automation: !include automations.yaml
 script: !include scripts.yaml
 
-frontend:
-  extra_module_url:
-    - /hacsfiles/lovelace-card-mod/card-mod.js
-    - /hacsfiles/thermal_comfort_icons/thermal_comfort_icons.js
-  themes: !include_dir_merge_named themes
