--- a/configuration/Areas/Bathroom/configuration.yaml
+++ b/configuration/Areas/Bathroom/configuration.yaml
@@ -1,138 +1,117 @@
-bathroom:
-  # Binary Sensors
-  #----------------------------------#
-  binary_sensor:
-    # Bayesian
-    #----------------------------------#
-    - platform: bayesian
-      name: Bathroom Occupied
-      prior: 0.11
-      device_class: occupancy
-      probability_threshold: 0.7
-      observations:
-
-        - platform: "state"
-          entity_id: binary_sensor.bathroom_door_contact
-          prob_given_true: 0.0056548
-          prob_given_false: 0.0000373
-          to_state: "off"
-
-        - platform: "state"
-          entity_id: binary_sensor.bathroom_motion
-          prob_given_true: 0.3084673
-          prob_given_false: 0.0014161
-          to_state: "on"
-
-        - platform: "state"
-          entity_id: binary_sensor.bathroom_motion_1_occupancy
-          prob_given_true: 0.2988542
-          prob_given_false: 0.0013911
-          to_state: "on"
-
-        - platform: "state"
-          entity_id: binary_sensor.bathroom_motion_2_occupancy
-          prob_given_true: 0.2862158
-          prob_given_false: 0.0013562
-          to_state: "on"
-
-        - platform: "state"
-          entity_id: climate.bathroom_radiator
-          prob_given_true: 0.0056548
-          prob_given_false: 0.0000373
-          to_state: "on"
-
-        - platform: "state"
-          entity_id: input_boolean.bathroom_schedule
-          prob_given_true: 0.2792857
-          prob_given_false: 0.0253888
-          to_state: "on"
-
-        - platform: "state"
-          entity_id: input_boolean.shower_occupied
-          prob_given_true: 0.3477679
-          prob_given_false: 0.0015058
-          to_state: "on"
-
-    - platform: trend
-      sensors:
-        bathroom_humidity_falling_trend:
-          friendly_name: Bathroom Humidity Falling Trend
-          entity_id: sensor.bathroom_humidity_change
-          sample_duration: 600
-          max_samples: 10
-          min_gradient: -0.033333333
-          device_class: moisture
-
-  # Variable Sensors
-  #----------------------------------#
-
-  sensor:
-
-  # Template Sensors
-  #----------------------------------#
+Bathroom:
   template:
-    # Template Binary Sensors
-    #----------------------------------#
-    binary_sensor:
-      # Bright Sensors
-      #----------------------------------#
-      - unique_id: bathroom_bright
-        name: "Bathroom Bright"
-        device_class: light
-        state: |
-          {% set lux = states('sensor.bathroom_illuminance') %}
-          {% set threshold = states('input_number.bathroom_illuminance_level') %}
-          {% set selfState = states('binary_sensor.bathroom_bright') %}
-          {% set lightState = states('light.bathroom') %}
-          {% set selfLastChanged = states.binary_sensor.bathroom_bright.last_changed %}
-          {% if threshold | int(0) == 0 %}
-            False
-          {% elif lux | int(0) > (threshold | int(0) * 1.3) and lightState == 'off' %}
-            True
-          {% elif lux | int(0) > (threshold | int(0) * 3) %}
-            True
-          {% elif ((threshold | int(0) < lux | int(0) < (threshold | int(0) * 1.3 ))) and (as_timestamp(now())-as_timestamp(selfLastChanged) < 300) %}
-            {{ selfState }}
-          {% elif lux | int(0) < threshold | int(0) %}
-            False
-          {% else %}
-            False
-          {% endif %}
-
-
-      # Humid Sensors
-      #----------------------------------#
-      - unique_id: bathroom_humid
-        name: "Bathroom Humid"
-        device_class: moisture
-        state: "{{states('sensor.bathroom_humidity') | float(51.0) > (states('sensor.bathroom_average_humidity') | float(50.0) * 1.3)}}"
-
-    # Template Variable Sensors
-    #----------------------------------#
-    sensor:
-      # Probabilities
-      #----------------------------------#
-      - unique_id: bathroom_occupied_probability
-        name: Bathroom Occupied Probability
-        state_class: measurement
-        unit_of_measurement: "%"
-        state: "{{ (state_attr('binary_sensor.bathroom_occupied','probability')*100 | int(0) ) | round(0) }}"
-  # Media Players
-  #----------------------------------#
-  media_player:
-
-  # Notification Platforms
-  #----------------------------------#
-  notify:
-
-  # Shell Commands
-  #----------------------------------#
-  shell_command:
-
-  # Switches
-  #----------------------------------#
-  switch:
-
-  # Cameras
-  #----------------------------------#
-  camera:
+    - binary_sensor:
+        - name: Bathroom Occupancy
+          unique_id: bathroom_occupancy
+          state: |-
+            {% set scores = namespace(total=0) %}
+            {% if is_state('binary_sensor.bathroom_motion', 'on') %}  {% set scores.total = scores.total + 2 %}{% endif %}
+            {% if is_state('binary_sensor.bathroom_door_contact', 'off') %}  {% set scores.total = scores.total + 1 %}{% endif %}
+            {% if is_state('input_boolean.bathroom_occupied_override', 'on') %}  {% set scores.total = scores.total + 5 %}{% endif %}
+            {{ scores.total >= 3 }}
+          attributes:
+            confidence_score: |-
+              {% set scores = namespace(total=0) %}
+              {% if is_state('binary_sensor.bathroom_motion', 'on') %}  {% set scores.total = scores.total + 2 %}{% endif %}
+              {% if is_state('binary_sensor.bathroom_door_contact', 'off') %}  {% set scores.total = scores.total + 1 %}{% endif %}
+              {% if is_state('input_boolean.bathroom_occupied_override', 'on') %}  {% set scores.total = scores.total + 5 %}{% endif %}
+              {{ scores.total }}
+            active_triggers: |-
+              {% set triggers = [] %}
+              {% if is_state('binary_sensor.bathroom_motion', 'on') %}  {% set triggers = triggers + ['Motion Detected'] %}{% endif %}
+              {% if is_state('binary_sensor.bathroom_door_contact', 'off') %}  {% set triggers = triggers + ['Door Closed'] %}{% endif %}
+              {% if is_state('input_boolean.bathroom_occupied_override', 'on') %}  {% set triggers = triggers + ['Manual Override'] %}{% endif %}
+              {{ triggers|join(', ') }}
+    - binary_sensor:
+        - name: Bathroom Temperature Rising
+          unique_id: bathroom_temp_rising
+          state: |-
+            {% set current = states('sensor.bathroom_temperature')|float(20) %}
+            {% set previous = state_attr('sensor.bathroom_temperature', 'previous_value')|float(20) %}
+            {% set threshold = 0.2 %}
+            {{ (current - previous) > threshold }}
+        - name: Bathroom Temperature Falling
+          unique_id: bathroom_temp_falling
+          state: |-
+            {% set current = states('sensor.bathroom_temperature')|float(20) %}
+            {% set previous = state_attr('sensor.bathroom_temperature', 'previous_value')|float(20) %}
+            {% set threshold = 0.2 %}
+            {{ (current - previous) < threshold }}
+      sensor:
+        - name: Bathroom Temperature Differential
+          unique_id: bathroom_temp_differential
+          state: |-
+            {% set current = states('sensor.bathroom_temperature')|float(20) %}
+            {% set target = state_attr('climate.bathroom', 'temperature')|float(20) %}
+            {{ (current - target)|round(1) }}
+          attributes:
+            current_temp: >-
+              {{ states('sensor.bathroom_temperature')|float(20) }}
+            target_temp: >-
+              {{ state_attr('climate.bathroom', 'temperature')|float(20) }}
+            mode: >-
+              {{ state_attr('climate.bathroom', 'hvac_action')|default('off') }}
+    - binary_sensor:
+        - name: Bathroom High Humidity
+          unique_id: bathroom_high_humidity
+          state: |-
+            {% set current = states('sensor.bathroom_humidity')|float(50) %}
+            {{ current > 75 }}
+      sensor:
+        - name: Bathroom Humidity Change
+          unique_id: bathroom_humidity_change
+          state: |-
+            {% set current = states('sensor.bathroom_humidity')|float(50) %}
+            {% set average = states('sensor.sensor.bathroom_humidity_average')|float(50) %}
+            {{ ((current - average) / average * 100)|round(1) }}
+          attributes:
+            current_humidity: >-
+              {{ states('sensor.bathroom_humidity')|float(50) }}
+            average_humidity: >-
+              {{ states('sensor.sensor.bathroom_humidity_average')|float(50) }}
+  input_number:
+    bathroom_temp_threshold:
+      name: Bathroom Temperature Threshold
+      min: 19.0
+      max: 25.0
+      step: 0.5
+      unit_of_measurement: °C
+      icon: mdi:thermometer
+      initial: 23.0
+    bathroom_light_brightness:
+      name: Bathroom Light Brightness
+      min: 0.0
+      max: 100.0
+      step: 5.0
+      unit_of_measurement: '%'
+      icon: mdi:brightness-6
+      initial: 100.0
+    bathroom_light_transition:
+      name: Bathroom Light Transition Time
+      min: 0.0
+      max: 10.0
+      step: 0.5
+      unit_of_measurement: s
+      icon: mdi:transition
+      initial: 5.0
+    bathroom_humidity_threshold:
+      name: Bathroom Humidity Threshold
+      min: 30.0
+      max: 80.0
+      step: 1.0
+      unit_of_measurement: '%'
+      icon: mdi:water-percent
+      initial: 60.0
+  input_boolean:
+    bathroom_light_color_mode:
+      name: Bathroom Light Color Mode
+      icon: mdi:palette
+    bathroom_occupied_override:
+      name: Bathroom Manual Occupancy Override
+      icon: mdi:account-check
+    bathroom_sleep_mode:
+      name: Bathroom Sleep Mode
+      icon: mdi:power-sleep
+    bathroom_automations:
+      name: Bathroom Automations
+      icon: mdi:robot
